# CxKittyForAndroid

./: .gitattributes  .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: apk.yml
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  termux-bootstrap-zip.S  xxt.cpp
app/src/main/java/com/termux/: Termux.kt
app/src/main/java/com/termux/app/: TermuxInstaller.java
app/src/main/java/com/termux/shared/termux/shell/: TermuxShellManager.java
app/src/main/java/com/termux/utils/: ReflectionUtils.java  SELinuxUtils.java  ShellEnvironmentUtils.java
app/src/main/java/github/psicodes/ktxpy/: Application.kt
app/src/main/java/github/psicodes/ktxpy/activities/: EditorActivity.kt  HomeActivity.kt  TermActivity.kt
app/src/main/java/github/psicodes/ktxpy/dataStore/: SettingsDataStore.kt
app/src/main/java/github/psicodes/ktxpy/ui/layoutComponents/: ListComponent.kt
app/src/main/java/github/psicodes/ktxpy/ui/screens/: AboutScreen.kt  HomeScreen.kt  LibraryDownloaderScreen.kt  SampleScreen.kt
app/src/main/java/github/psicodes/ktxpy/utils/: Commands.kt  Keys.kt  SessionManager.kt
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml  themes.xml
